Change .gitignore to ignore image folder in problem set 5

--- a/.gitignore
+++ b/.gitignore
@@ -216,4 +216,4 @@ __marimo__/
 .streamlit/secrets.toml
 
 # Specific files
-/home/redakas/projects/CS50AI/psets/5/traffic/gtsrb
+psets/5/traffic/gtsrb
